# HoloDaYe

./: .gitignore  CMakeConfig.txt  CMakeLists.txt  README.md
ARKit-CoreLocation/: Podfile
ARKit-CoreLocation/ARKit+CoreLocation/: Info.plist  OpenARCell.swift  POIViewController+ARSCNViewDelegate.swift  POIViewController.swift  SettingsViewController.swift  peakValue.swift
ARKit-CoreLocation/ARKit+CoreLocation.xcworkspace/: contents.xcworkspacedata
ARKit-CoreLocation/ARKit+CoreLocation/Assets.xcassets/peak.imageset/: Contents.json
ARKit-CoreLocation/ARKit+CoreLocation/Assets.xcassets/peak2.imageset/: Contents.json
ARKit-CoreLocation/ARKit+CoreLocation/Assets.xcassets/peak3.imageset/: Contents.json
ARKit-CoreLocation/ARKit+CoreLocation/Assets.xcassets/peak4.imageset/: Contents.json
ARKit-CoreLocation/ARKit+CoreLocation/Assets.xcassets/peak5.imageset/: Contents.json
ARKit-CoreLocation/ARKit+CoreLocation/Base.lproj/: Main.storyboard
ARKit-CoreLocation/Elevation.xcodeproj/: project.pbxproj
ARKit-CoreLocation/Elevation.xcodeproj/xcshareddata/xcschemes/: HoloDaYe.xcscheme  HoloDaYe_v2.xcscheme
ARKit-CoreLocation/Elevation.xcworkspace/: contents.xcworkspacedata
ARKit-CoreLocation/Sources/ARKit-CoreLocation/Nodes/: LocationAnnotationNode.swift  LocationNode.swift
ARKit-CoreLocation/imgs/: peak3.html
app-demo/: Podfile  README.md
app-demo/Elevation-demo.xcodeproj/: project.pbxproj
app-demo/Elevation-demo.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
app-demo/Elevation-demo.xcodeproj/project.xcworkspace/xcuserdata/yu.xcuserdatad/: UserInterfaceState.xcuserstate
app-demo/Elevation-demo.xcodeproj/xcuserdata/yu.xcuserdatad/xcschemes/: xcschememanagement.plist
app-demo/app-demo/: AppDelegate.swift  ViewController.swift
app-demo/app-demo.xcworkspace/: contents.xcworkspacedata
app-demo/app-demoTests/: app_demoTests.swift
app-demo/app-demoUITests/: app_demoUITests.swift  app_demoUITestsLaunchTests.swift
data/: check_zip.sh  clear_all.sh  killall.sh  paralell_download.sh  process_data.py  readme.md  unzip_data.sh
final_demo_data/: CMakeLists.txt  process.cpp  result_ml.txt
include/holodaye/: elevation.h  output.h  utils.h
landscape_demo/: fake_data.m  landscape_demo.m  read.m
src/: dataset.cpp  main.cpp  output.cpp  query.cpp  utils.cpp
test/: dummy_elevation_data_test.cpp  dummy_elevation_test.cpp  elevation_data_test.cpp  elevation_query_test.cpp  uetliberg.cpp
